--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "sample-typescript-starter",
   "version": "1.0.0",
-  "description": "gusachenko gleb portfolio page",
+  "description": "sample-typescript-starter project structure",
   "main": "./dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "build:watch": "gulp watch",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\""
   },
-  "author": "GusachenkoGleb",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
